[gd_scene load_steps=5 format=3 uid="uid://dkfw1gs1b6rj1"]

[ext_resource type="Script" uid="uid://bhafs30unjsfw" path="res://inicio.gd" id="1_yogrx"]
[ext_resource type="Texture2D" uid="uid://d0aj3qvixbbyp" path="res://botao5.png" id="2_htw3k"]
[ext_resource type="Texture2D" uid="uid://kue3gp2sclu8" path="res://sprite_0 2.png" id="3_7e6sy"]
[ext_resource type="Texture2D" uid="uid://c5m46lfsshe1s" path="res://botao3.png" id="3_x8a4r"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yogrx")

[node name="sair_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 436.0
offset_top = 502.0
offset_right = 836.0
offset_bottom = 630.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("2_htw3k")
texture_hover = ExtResource("3_x8a4r")
script = ExtResource("1_yogrx")

[node name="Label" type="Label" parent="sair_button"]
layout_mode = 0
offset_left = 132.857
offset_top = 18.5714
offset_right = 308.857
offset_bottom = 133.571
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 84
text = "Quit"

[node name="TextureButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 436.0
offset_top = 380.0
offset_right = 836.0
offset_bottom = 508.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("2_htw3k")
texture_hover = ExtResource("3_7e6sy")

[node name="Label" type="Label" parent="TextureButton2"]
layout_mode = 0
offset_left = 74.2857
offset_top = 21.4286
offset_right = 394.286
offset_bottom = 136.429
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 84
text = "Options"

[node name="TextureButton3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 436.0
offset_top = 258.0
offset_right = 836.0
offset_bottom = 386.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("2_htw3k")
texture_hover = ExtResource("3_7e6sy")

[node name="Label" type="Label" parent="TextureButton3"]
layout_mode = 0
offset_left = 135.714
offset_top = 20.0
offset_right = 304.714
offset_bottom = 135.0
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 84
text = "Play"

[connection signal="pressed" from="sair_button" to="sair_button" method="_on_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_texture_button_3_pressed"]
